# htmx-starter

./: Cargo.toml  LICENSE
.history/src/: main_20240731003312.rs
.history/src/templates/htmx-rust/: .env_20240731002926  .env_20240731003141  .gitignore_20240731002306  .gitignore_20240731002310
.history/src/templates/htmx-rust/src/: main_20240727013726.rs  main_20240731002644.rs  (+10 more)
src/: main.rs
src/templates/htmx-go/: .env  go.mod  go.sum  main.go
src/templates/htmx-go/templates/: index.html
src/templates/htmx-rust/: Cargo.toml  README.md
src/templates/htmx-rust/.history/src/: main_20240721022519.rs  main_20240727010953.rs  main_20240727010956.rs  main_20240727011000.rs  main_20240727011003.rs  main_20240727011006.rs  main_20240727011008.rs  main_20240727011012.rs  main_20240727011022.rs  main_20240727011024.rs  main_20240727011026.rs  main_20240727011030.rs  main_20240727011033.rs  main_20240727011041.rs  main_20240727011119.rs  main_20240727011122.rs  main_20240727011123.rs  main_20240727011129.rs  main_20240727011130.rs  main_20240727011131.rs  main_20240727011135.rs  main_20240727011136.rs  main_20240727011138.rs  main_20240727011145.rs  main_20240727011203.rs  main_20240727011205.rs  main_20240727011208.rs  main_20240727011213.rs  main_20240727011224.rs
src/templates/htmx-rust/src/: main.rs
src/templates/htmx-rust/src/templates/: index.html
src/templates/htmx-typescript/: .env  .gitignore  README.md  package.json  tailwind.config.js  tsconfig.json
src/templates/htmx-typescript/src/: main.ts
src/templates/htmx-typescript/templates/: index.njk
(+4 files in other folders)
