[package]
name = "htmx-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
hyper = "1.4.1"
tokio = { version = "1", features = ["full"] }
tera = { version = "1", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsql = "0.4.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
dotenvy = "=0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"
axum-template = "2.3.0"